# cubo_magico

./: .gitignore  learn.py  main.py  pyproject.toml  state_generator.py
cubo/: __init__.py  cubo.py  face.py
