[tool.poetry]
name = "cubo-magico"
version = "0.1.0"
description = ""
authors = ["João <oliveira.joaovtr@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.12.*"
numpy = "^1.26.4"
pygame = "^2.5.2"
tensorflow = "^2.17.0"
pandas = "^2.2.2"
scikit-learn = "^1.5.1"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
taskipy = "^1.13.0"
blue = "^0.9.1"


[tool.taskipy.tasks]
# lint = ''
format = 'isort . && blue .'
run = 'python .\pynapse\main.py'
# pre_test = 'task lint'
# test = 'pytest -s -x --cov=pynapse -vv'
# post_test = 'coverage html'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
